--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -9,7 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Update Activity
-
+    env:
+      - version: v2.3.2
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: Readme-Workflows/recent-activity@{version}
