fix: fixed the environment variable call for update-activity

--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Update Activity
     env:
-      - version: v2.3.2
+      - VERSION: v2.3.2
     steps:
       - uses: actions/checkout@v2.3.4
-      - uses: Readme-Workflows/recent-activity@${version}
+      - uses: Readme-Workflows/recent-activity@${{env.VERSION}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
