fix: fixed the way the code is programmed in the update-activity workflow

--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Update Activity
     env:
-      - VERSION: v2.3.2
+      VERSION: v2.3.2
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: Readme-Workflows/recent-activity@${{env.VERSION}}
